More merge fixes